tests/rosetta/transpiler/Clojure/floyd-warshall-algorithm2.error
run error: exit status 1
Execution error (IndexOutOfBoundsException) at main/-main (floyd-warshall-algorithm2.clj:39).
null

Full report at:
/tmp/clojure-4382311164047059855.edn
